# kinora

./: .beans.yml  .mise.toml  CLAUDE.md  Cargo.toml  README.md  flake.nix  manifest
.beads/: metadata.json
.beans/: kinora-0sgr--record-head-ts-on-rootentry-so-gc-is-independent-o.md  kinora-5k13--data-layer-content-store-append-only-ledger.md  kinora-61f9--phase-2b-kinora-compact-command.md  kinora-6395--cli-rename-lineage-wording-for-hot-ledger-writes.md  kinora-6zxd--cli-resolve-command.md  kinora-7mou--phase-35-compact-consumes-assigns-ambiguousassign.md  kinora-860i--cli-store-command.md  kinora-8l4w--logging-fastrace-spans-logforth-init-debug-logs-at.md  kinora-9nom--cli-render-command-mdbook.md  kinora-b1mg--kinora-clone-rebuild-kinora-into-a-fresh-directory.md  kinora-c48l--phase-31-config-roots-block-inbox-auto-provision.md  kinora-cium--dogfood-migrate-kudo-rfcs-as-first-kinos.md  kinora-f0rg--phase-37-cross-root-integrity-external-refs-preven.md  kinora-fhw1--resolve-rfc-0003-open-questions.md  kinora-g08g--phase-33-assign-event-kinora-assign-cli-store-root.md  kinora-h4xs--phase-2a-root-kind-entry-schema.md  kinora-hxmw--phase-3-multiple-named-roots-assign-event-per-root.md  kinora-l79b--phase-34-compact-library-split-compact-root-compac.md  kinora-ml4t--render-revisit-branch-labels-under-hot-ledger-layo.md  kinora-mngq--phase-36-gcprune-per-policy-pin-support.md  kinora-ojc8--repack-drains-already-archived-staged-events.md  kinora-ou1u--reformat-synthesize-nested-composition-entries-fro.md  kinora-q6bo--clean-staged-after-commit-preserve-history-as-kino.md  (+8 more)
(+52 files in other folders)
